Fixed breaking on mobile displays

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ p, label
     padding: 0.5em;
     border: 5px solid var(--darkgrey);
     border-radius: 15px;
+    max-width: 80vw;
 }
 
 #guess_button
